make sure carousel captions in tabs look nice on mobile #450

--- a/django-verdant/rca/static/rca/css/modules-desktop-small.less
+++ b/django-verdant/rca/static/rca/css/modules-desktop-small.less
@@ -192,7 +192,7 @@
     }
 
     li.active a{
-        background-color:darken(@color-pale-grey, 10%);
+        background-color: @color-tab-grey;
     }
     &.tabs-1 a{
         .column(6, @grid-gutter-width);
